<?xml version="1.0" encoding="utf-8"?>
<resources><string name="hello_world">open file</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_open_file_demo">OpenFileDemo</string>

    <string name="app_name">trans</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="format_share">share</string>
    <string name="format_about">about</string>
    <string name="format_setting">settings</string>
    <string name="format_feedback">feedback</string>
    <string name="format_audio_transform">audio trans</string>
    <string name="format_video_transform">video trans</string>

    <string name="tool_open_src_file">input the src file path</string>
    <string name="tool_open_dst_file">input the dst file path</string>

    <string name="feedback_to_email">send</string>
    <string name="format_transform_start">transform</string>

    <string name="drawer_background_color">drawer menu setting</string>
    <string name="tool_background_color">tool bar color setting</string>
    <string name="background_color">background color setting</string>
    <string name="setting_color_red">red</string>
    <string name="setting_color_blue">blue</string>
    <string name="setting_color_grey">grey</string>
    <string name="setting_self_update">auto update</string>
    <string name="setting_self_update_no">no</string>
    <string name="setting_self_update_yes">yes</string>
    <string name="setting_exit_system">exit</string>
    <string name="setting_accept_push">allow push</string>
    <string name="setting_accept_yes">allow</string>
    <string name="setting_accept_no">no</string>

    <string name="src_file_path_not_null">src file path not null</string>
    <string name="dst_file_path_not_null">dst file path not null</string>

    <string name="about_version">The current version is:0.1.1;It belongs to the tool app;if you have advices,Please send email to zhaokangk@sina.com</string>
</resources>